--- a/lab4/lab4.vcxproj
+++ b/lab4/lab4.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -102,6 +103,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -116,6 +118,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,6 +133,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -141,12 +145,14 @@
   <ItemGroup>
     <ClCompile Include="descriptor.cpp" />
     <ClCompile Include="lab4.cpp" />
+    <ClCompile Include="md5.cpp" />
     <ClCompile Include="rDescriptor.cpp" />
     <ClCompile Include="Table.cpp" />
     <ClCompile Include="wDescriptor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="descriptor.h" />
+    <ClInclude Include="md5.h" />
     <ClInclude Include="rDescriptor.h" />
     <ClInclude Include="Table.h" />
     <ClInclude Include="wDescriptor.h" />
