--- a/lab4/lab4.vcxproj.filters
+++ b/lab4/lab4.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Table.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="md5.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="descriptor.h">
@@ -42,6 +45,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Table.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="md5.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
