--- a/lab4/lab4.vcxproj.filters
+++ b/lab4/lab4.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="md5.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="MyMap.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
